# marble

./: CMakeLists.txt  shaders.cmake
.github/workflows/: cmake.yml
lib/: lib.cmake
lib/gl/: gl.cmake
lib/gl/glvnd/: gl.cpp  gl.hpp
lib/imgui/: imconfig.h
shaders/: cube_skybox.frag  cutoff_depth.frag  default.vert  irradiance.frag  pbr.frag  quad.vert  rect_skybox.frag  reflection.frag  reflection_brdf.frag  simple.frag  skybox.vert  test_skybox.frag
src/: engine.cpp  engine.hpp  main.cpp  window.cpp
src/entities/: entity.hpp  entity_manager.cpp  entity_manager.hpp  model_view.hpp  orbit_cam.hpp
src/render/: core.cpp  core.hpp  gltf.cpp  gltf.hpp  import.cpp  import.hpp  model.cpp  model.hpp  render.cpp  render.hpp  standard_mesh.cpp  standard_mesh.hpp
